--- a/index.html
+++ b/index.html
@@ -6,172 +6,210 @@
     <title>Buy Button Test</title>
 </head>
 <body>
-    <div id='product-component-1743107894182'></div>
-    <style>
-        
-    </style>
-<script type="text/javascript">
-/*<![CDATA[*/
-(function () {
-  var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
-  if (window.ShopifyBuy) {
-    if (window.ShopifyBuy.UI) {
-      ShopifyBuyInit();
-    } else {
-      loadScript();
-    }
-  } else {
-    loadScript();
-  }
-  function loadScript() {
-    var script = document.createElement('script');
-    script.async = true;
-    script.src = scriptURL;
-    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
-    script.onload = ShopifyBuyInit;
-  }
-  function ShopifyBuyInit() {
-    var client = ShopifyBuy.buildClient({
-      domain: 'discipleshiproad.myshopify.com',
-      storefrontAccessToken: '61bcf0e3b36364639bf1b73f59626614',
-    });
-    ShopifyBuy.UI.onReady(client).then(function (ui) {
-      ui.createComponent('product', {
-        id: '8741518803170',
-        node: document.getElementById('product-component-1743107894182'),
-        moneyFormat: '%24%7B%7Bamount%7D%7D',
-        options: {
-  "product": {
-    "styles": {
+   
+    <div id='product-component-1743109275556'></div>
+    <script type="text/javascript">
+    /*<![CDATA[*/
+    (function () {
+      var scriptURL = 'https://sdks.shopifycdn.com/buy-button/latest/buy-button-storefront.min.js';
+      if (window.ShopifyBuy) {
+        if (window.ShopifyBuy.UI) {
+          ShopifyBuyInit();
+        } else {
+          loadScript();
+        }
+      } else {
+        loadScript();
+      }
+      function loadScript() {
+        var script = document.createElement('script');
+        script.async = true;
+        script.src = scriptURL;
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(script);
+        script.onload = ShopifyBuyInit;
+      }
+      function ShopifyBuyInit() {
+        var client = ShopifyBuy.buildClient({
+          domain: 'discipleshiproad.myshopify.com',
+          storefrontAccessToken: '61bcf0e3b36364639bf1b73f59626614',
+        });
+        ShopifyBuy.UI.onReady(client).then(function (ui) {
+          ui.createComponent('product', {
+            id: '8741518803170',
+            node: document.getElementById('product-component-1743109275556'),
+            moneyFormat: '%24%7B%7Bamount%7D%7D',
+            options: {
       "product": {
-        "@media (min-width: 601px)": {
-          "max-width": "calc(25% - 20px)",
-          "margin-left": "20px",
-          "margin-bottom": "50px"
+        "styles": {
+          "product": {
+            "@media (min-width: 601px)": {
+              "max-width": "100%",
+              "margin-left": "0",
+              "margin-bottom": "50px"
+            },
+            "text-align": "left"
+          },
+          "title": {
+            "font-size": "26px"
+          },
+          "button": {
+            "font-family": "Montserrat, sans-serif",
+            "font-weight": "bold",
+            ":hover": {
+              "background-color": "#d30025"
+            },
+            "background-color": "#ea0029",
+            ":focus": {
+              "background-color": "#d30025"
+            },
+            "border-radius": "0px",
+            "padding-left": "54px",
+            "padding-right": "54px"
+          },
+          "price": {
+            "font-size": "18px"
+          },
+          "compareAt": {
+            "font-size": "15.299999999999999px"
+          },
+          "unitPrice": {
+            "font-size": "15.299999999999999px"
+          }
+        },
+        "layout": "horizontal",
+        "contents": {
+          "img": false,
+          "imgWithCarousel": true,
+          "button": false,
+          "buttonWithQuantity": true,
+          "description": true
+        },
+        "width": "100%",
+        "text": {
+          "button": "Add to cart"
+        },
+        "googleFonts": [
+          "Montserrat"
+        ]
+      },
+      "productSet": {
+        "styles": {
+          "products": {
+            "@media (min-width: 601px)": {
+              "margin-left": "-20px"
+            }
+          }
         }
       },
-      "button": {
-        "font-family": "Montserrat, sans-serif",
-        "font-weight": "bold",
-        "text-transform": "uppercase",
-        ":hover": {
-          "background-color": "#d30025"
+      "modalProduct": {
+        "contents": {
+          "img": false,
+          "imgWithCarousel": true,
+          "button": false,
+          "buttonWithQuantity": true
         },
-        "background-color": "#ea0029",
-        ":focus": {
-          "background-color": "#d30025"
+        "styles": {
+          "product": {
+            "@media (min-width: 601px)": {
+              "max-width": "100%",
+              "margin-left": "0px",
+              "margin-bottom": "0px"
+            }
+          },
+          "button": {
+            "font-family": "Montserrat, sans-serif",
+            "font-weight": "bold",
+            ":hover": {
+              "background-color": "#d30025"
+            },
+            "background-color": "#ea0029",
+            ":focus": {
+              "background-color": "#d30025"
+            },
+            "border-radius": "0px",
+            "padding-left": "54px",
+            "padding-right": "54px"
+          },
+          "title": {
+            "font-family": "Helvetica Neue, sans-serif",
+            "font-weight": "bold",
+            "font-size": "26px",
+            "color": "#4c4c4c"
+          },
+          "price": {
+            "font-family": "Helvetica Neue, sans-serif",
+            "font-weight": "normal",
+            "font-size": "18px",
+            "color": "#4c4c4c"
+          },
+          "compareAt": {
+            "font-family": "Helvetica Neue, sans-serif",
+            "font-weight": "normal",
+            "font-size": "15.299999999999999px",
+            "color": "#4c4c4c"
+          },
+          "unitPrice": {
+            "font-family": "Helvetica Neue, sans-serif",
+            "font-weight": "normal",
+            "font-size": "15.299999999999999px",
+            "color": "#4c4c4c"
+          }
         },
-        "border-radius": "0px",
-        "padding-left": "54px",
-        "padding-right": "54px"
-      }
-    },
-    "contents": {
-      "img": false,
-      "title": false,
-      "price": false
-    },
-    "text": {
-      "button": "Add to cart"
-    },
-    "googleFonts": [
-      "Montserrat"
-    ]
-  },
-  "productSet": {
-    "styles": {
-      "products": {
-        "@media (min-width: 601px)": {
-          "margin-left": "-20px"
-        }
-      }
-    }
-  },
-  "modalProduct": {
-    "contents": {
-      "img": false,
-      "imgWithCarousel": true,
-      "button": false,
-      "buttonWithQuantity": true
-    },
-    "styles": {
-      "product": {
-        "@media (min-width: 601px)": {
-          "max-width": "100%",
-          "margin-left": "0px",
-          "margin-bottom": "0px"
+        "googleFonts": [
+          "Montserrat"
+        ],
+        "text": {
+          "button": "Add to cart"
         }
       },
-      "button": {
-        "font-family": "Montserrat, sans-serif",
-        "font-weight": "bold",
-        ":hover": {
-          "background-color": "#d30025"
+      "option": {},
+      "cart": {
+        "styles": {
+          "button": {
+            "font-family": "Montserrat, sans-serif",
+            "font-weight": "bold",
+            ":hover": {
+              "background-color": "#d30025"
+            },
+            "background-color": "#ea0029",
+            ":focus": {
+              "background-color": "#d30025"
+            },
+            "border-radius": "0px"
+          }
         },
-        "background-color": "#ea0029",
-        ":focus": {
-          "background-color": "#d30025"
+        "text": {
+          "total": "Subtotal",
+          "button": "Checkout"
         },
-        "border-radius": "0px",
-        "padding-left": "54px",
-        "padding-right": "54px"
-      }
-    },
-    "googleFonts": [
-      "Montserrat"
-    ],
-    "text": {
-      "button": "Add to cart"
-    }
-  },
-  "option": {},
-  "cart": {
-    "styles": {
-      "button": {
-        "font-family": "Montserrat, sans-serif",
-        "font-weight": "bold",
-        ":hover": {
-          "background-color": "#d30025"
-        },
-        "background-color": "#ea0029",
-        ":focus": {
-          "background-color": "#d30025"
-        },
-        "border-radius": "0px"
-      }
-    },
-    "text": {
-      "total": "Subtotal",
-      "button": "Checkout"
-    },
-    "googleFonts": [
-      "Montserrat"
-    ]
-  },
-  "toggle": {
-    "styles": {
+        "googleFonts": [
+          "Montserrat"
+        ]
+      },
       "toggle": {
-        "font-family": "Montserrat, sans-serif",
-        "font-weight": "bold",
-        "background-color": "#ea0029",
-        ":hover": {
-          "background-color": "#d30025"
+        "styles": {
+          "toggle": {
+            "font-family": "Montserrat, sans-serif",
+            "font-weight": "bold",
+            "background-color": "#ea0029",
+            ":hover": {
+              "background-color": "#d30025"
+            },
+            ":focus": {
+              "background-color": "#d30025"
+            }
+          }
         },
-        ":focus": {
-          "background-color": "#d30025"
-        }
+        "googleFonts": [
+          "Montserrat"
+        ]
       }
     },
-    "googleFonts": [
-      "Montserrat"
-    ]
-  }
-},
-      });
-    });
-  }
-})();
-/*]]>*/
-</script>
+          });
+        });
+      }
+    })();
+    /*]]>*/
+    </script>
 </body>
 </html>
