--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Buy Button Test</title>
 </head>
 <body>
-   
+
+    <h1 style="text-align: center; font-family: sans-serif;">HTML ADDED HEADING HERE OUTSIDE OF EMBED</h1>
     <div id='product-component-1743109275556'></div>
     <script type="text/javascript">
     /*<![CDATA[*/
