--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           "button": {
             "font-family": "Montserrat, sans-serif",
             "font-weight": "bold",
+            "text-transform": "uppercase",
             ":hover": {
               "background-color": "#d30025"
             },
